--- a/aperture.css
+++ b/aperture.css
@@ -20,3 +20,26 @@
 .apertured.ghost {
   animation-duration: 2s;
 }
+
+img {
+    width: 100%;
+}
+
+#viewer{
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
+#viewer img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+#viewer.ghost img {
+    width: calc(100% + 50px);
+    height: : calc(100% + 50px);
+    top: -50px;
+    left: -50px;
+
+}
