--- a/aperture.css
+++ b/aperture.css
@@ -25,11 +25,14 @@ img {
     width: 100%;
 }
 
+
 #viewer{
   overflow: hidden;
   position: relative;
   width: 100%;
   height: 400px;
+  box-shadow: 2px 3px 4px #333;
+  border: solid #999 1px;
 }
 #viewer img {
   position: absolute;
